[package]
name = "enkei"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1.0"
getset = "0.1.1"
figlet-rs = "0.1.3"
serde_yaml = "0.8"
structopt = "0.3.22"
validator = { version = "0.12", features = ["derive"] }
tracing-subscriber = "0.2"
tracing ={ version = "0.1", features = ["attributes"] } 
axum = "0.2.5"
tower-http = { version = "0.1", features = ["trace"] }
tower = { version = "0.4", features = ["full"] }
humantime-serde = "1.0.1"
mongodb = "2.0.0"
thiserror = "1.0"
hyper = "0.14.13"
futures = "0.3"
